# computecapx-python

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml  sdk-audit.yml
computecapx/: __init__.py  cli.py  client.py  detector.py  py.typed  run.py  wrapper.py
tests/: __init__.py  test_cli.py  test_imports.py  test_interception.py  test_streaming.py
