# computecapx/pyproject.toml
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "computecapx"
version = "1.0.0"  # Match this with __init__.py!
authors = [
    { name="ComputeCap", email="support@computecap.io" }
]
description = "Enterprise Unified FinOps & Governance Layer: Multi-Cloud Telemetry and Cost Mitigation."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests>=2.28.0",
    "pydantic>=2.0.0",
    "psutil>=5.9.0", # Added psutil as an automatic dependency for hardware profiling [10]
]

# Registers the shell script entry points to compile native terminal binaries
[project.scripts]
computecapx = "computecapx.cli:main"
computecapx-run = "computecapx.run:main" # Added entry point for the zero-code wrapper [10]

[project.urls]
"Homepage" = "https://github.com/yourusername/computecapx"