[project]
name = "computecapx"
version = "1.0.0"
description = "Enterprise FinOps & AI governance SDK — monitor costs, enforce budgets, and prevent runaway AI loops across every cloud provider."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.8"
authors = [
    { name = "ComputeCap", email = "support@computecap.io" }
]
maintainers = [
    { name = "ComputeCap", email = "support@computecap.io" }
]
keywords = [
    "finops", "ai", "monitoring", "llm", "cost", "governance",
    "openai", "anthropic", "gemini", "cloud", "telemetry", "observability"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Monitoring",
    "Topic :: Office/Business :: Financial",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Typing :: Typed",
]
dependencies = [
    "requests>=2.28.0",
    "pydantic>=2.0.0",
    "psutil>=5.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.4.0",
    "mypy>=1.0.0",
    "twine>=5.0.0",
    "build>=1.0.0",
]

[project.urls]
Homepage = "https://computecapx.com"
Documentation = "https://computecapx.com/docs"
Repository = "https://github.com/computecap/computecapx-python"
"Bug Tracker" = "https://github.com/computecap/computecapx-python/issues"
Changelog = "https://github.com/computecap/computecapx-python/blob/main/CHANGELOG.md"

[project.scripts]
computecapx = "computecapx.cli:main"
computecapx-run = "computecapx.run:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["computecapx*"]

[tool.setuptools.package-data]
computecapx = ["py.typed"]

# ---------------------------------------------------------------------------
# Tool Configuration
# ---------------------------------------------------------------------------

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]  # Line length handled by formatter

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short -q"

[tool.coverage.run]
source = ["computecapx"]
omit = ["tests/*"]